--- a/index.html
+++ b/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Homepage</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- this is navbar section -->
     <header>
- <nav>
-    <div class="menu-container">
-        <div class="logo">
-            <img src="Assets/logo/logo.png" alt="">
-        </div>
-        <div class="menu">
+      <nav>
+        <div class="menu-container">
+          <div>
+            <img
+              class="logo"
+              src="Assets(Simple home)/logo/logo-light.png"
+              alt=""
+            />
+          </div>
+          <div class="menu">
             <li class="homeitems">Home-1</li>
             <li class="homeitems">Home-2</li>
             <li class="homeitems">Home-3</li>
             <li class="homeitems">Home-4</li>
-
+          </div>
         </div>
-    </div> 
- </nav>
+      </nav>
     </header>
-    <main></main>
 
-    <footer>
+    <main>
+      <section>
+        <div class="banner-container">
+        
+          <div class="banner-text">
+            <h1>Make your business <br>smooth with elegance</h1>
+            <p class="description">
+              We are a creative stdio specializing in UI/UX design,development
+              and strategy
+            </p>
+            <button class="button">Explore More</button>
+          </div>
+          <div class="bannerphoto"></div>
+          <div class="banner-photo"><img class="banner-img" src="images/banner.png" alt=""></div>
+        </div>
+      </section>
+    </main>
 
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
