added about us section

--- a/index.html
+++ b/index.html
@@ -14,35 +14,55 @@
           <div>
             <img
               class="logo"
-              src="Assets(Simple home)/logo/logo-light.png"
+              src="logo/logo-light.png"
               alt=""
             />
           </div>
           <div class="menu">
-            <li class="homeitems">Home-1</li>
-            <li class="homeitems">Home-2</li>
-            <li class="homeitems">Home-3</li>
-            <li class="homeitems">Home-4</li>
+            <li class="homeitems">Products</li>
+            <li class="homeitems">Services</li>
+            <li class="homeitems">Availability</li>
+            <li class="homeitems">Management</li>
+            <li class="homeitems">Customer Support</li>
+
           </div>
         </div>
       </nav>
     </header>
 
     <main>
+      <!-- this is banner section -->
       <section>
         <div class="banner-container">
-        
           <div class="banner-text">
-            <h1>Make your business <br>smooth with elegance</h1>
+            <h1 class="title">Make your business <br />smooth with elegance</h1>
             <p class="description">
-              We are a creative stdio specializing in UI/UX design,development
+              We are a creative studio specializing in UI/UX design,development
               and strategy
             </p>
             <button class="button">Explore More</button>
           </div>
           <div class="bannerphoto"></div>
-          <div class="banner-photo"><img class="banner-img" src="images/banner.png" alt=""></div>
+          <div class="banner-photo">
+            <img class="banner-img" src="images/banner.png" alt="" />
+          </div>
         </div>
+      </section>
+      <!-- this is about us section -->
+      <section>
+        <h3 class="about-title" >About Us</h3>
+<div class="about-container">
+<div class="about-info">
+  <h1 >We grow brands through <br> bold & strategic creations</h1>
+  <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Illo ipsam pariatur iusto at natus nemo adipisci blanditiis recusandae obcaecati </p>
+  <button class="button">Contact Us</button>
+</div>
+<div class="about-photo">
+  <img class="banner-img" src="images/section.png" alt="">
+</div>
+
+</div>
+
       </section>
     </main>
 
