Added services section

--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
       <nav>
         <div class="menu-container">
           <div>
-            <img
-              class="logo"
-              src="logo/logo-light.png"
-              alt=""
-            />
+            <img class="logo" src="logo/logo-light.png" alt="" />
           </div>
           <div class="menu">
             <li class="homeitems">Products</li>
@@ -24,7 +20,6 @@
             <li class="homeitems">Availability</li>
             <li class="homeitems">Management</li>
             <li class="homeitems">Customer Support</li>
-
           </div>
         </div>
       </nav>
@@ -50,20 +45,54 @@
       </section>
       <!-- this is about us section -->
       <section>
-        <h3 class="about-title" >About Us</h3>
-<div class="about-container">
-<div class="about-info">
-  <h1 >We grow brands through <br> bold & strategic creations</h1>
-  <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Illo ipsam pariatur iusto at natus nemo adipisci blanditiis recusandae obcaecati </p>
-  <button class="button">Contact Us</button>
-</div>
-<div class="about-photo">
-  <img class="banner-img" src="images/section.png" alt="">
-</div>
-
-</div>
-
+        <h3 class="about-title">About Us</h3>
+        <div class="about-container">
+          <div class="about-info">
+            <h1>
+              We grow brands through <br />
+              bold & strategic creations
+            </h1>
+            <p class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              <br />Illo ipsam pariatur iusto at natus nemo adipisci blanditiis
+              recusandae obcaecati
+            </p>
+            <button class="button">Contact Us</button>
+          </div>
+          <div class="about-photo">
+            <img class="banner-img" src="images/section.png" alt="" />
+          </div>
+        </div>
       </section>
+      <!-- this is service section -->
+<section >
+  <div class="services">
+  <h1 class="about-title box-title ">Our Services</h1>
+  <div class="service-container">
+    
+    <div class="box">
+      <img class="icon" src="icon/0.png" alt="">
+      <h3 class="box-title">Web Development</h3>
+      <p class="box-description" >Unlock the potential of your online presence with our expert web development solutions</p>
+      <button class="button">Details </button>
+    </div>
+    <div class="box">
+      <img class="icon" src="icon/1.png" alt="">
+      <h3 class="box-title">Data Security</h3>
+      <p class="box-description" >Safeguard your sensitive data and protect your business from cyber threats with our comprehensive data security solutions</p>
+      <button  class="button">Details </button>
+    </div>
+    <div class="box">
+      <img class="icon" src="icon/2.png" alt="">
+      <h3 class="box-title" >UI/UX Design</h3>
+      <p class="box-description" >Elevate user experiences and captivate your audience with our innovative UI/UX design services</p>
+      <button class="button">Details </button>
+    </div>
+
+  </div>
+</div>
+</section>
+
     </main>
 
     <footer></footer>
