--- a/index.html
+++ b/index.html
@@ -65,34 +65,40 @@
         </div>
       </section>
       <!-- this is service section -->
-<section >
-  <div class="services">
-  <h1 class="about-title box-title ">Our Services</h1>
-  <div class="service-container">
-    
-    <div class="box">
-      <img class="icon" src="icon/0.png" alt="">
-      <h3 class="box-title">Web Development</h3>
-      <p class="box-description" >Unlock the potential of your online presence with our expert web development solutions</p>
-      <button class="button">Details </button>
-    </div>
-    <div class="box">
-      <img class="icon" src="icon/1.png" alt="">
-      <h3 class="box-title">Data Security</h3>
-      <p class="box-description" >Safeguard your sensitive data and protect your business from cyber threats with our comprehensive data security solutions</p>
-      <button  class="button">Details </button>
-    </div>
-    <div class="box">
-      <img class="icon" src="icon/2.png" alt="">
-      <h3 class="box-title" >UI/UX Design</h3>
-      <p class="box-description" >Elevate user experiences and captivate your audience with our innovative UI/UX design services</p>
-      <button class="button">Details </button>
-    </div>
-
-  </div>
-</div>
-</section>
-
+      <section>
+        <div class="services">
+          <h1 class="about-title box-title">Our Services</h1>
+          <div class="service-container">
+            <div class="box">
+              <img class="icon" src="icon/0.png" alt="" />
+              <h3 class="box-title">Web Development</h3>
+              <p class="box-description">
+                Unlock the potential of your online presence with our expert web
+                development solutions
+              </p>
+              <button class="button">Details</button>
+            </div>
+            <div class="box">
+              <img class="icon" src="icon/1.png" alt="" />
+              <h3 class="box-title">Data Security</h3>
+              <p class="box-description">
+                Safeguard your sensitive data and protect your business from
+                cyber threats with our comprehensive data security solutions
+              </p>
+              <button class="button">Details</button>
+            </div>
+            <div class="box">
+              <img class="icon" src="icon/2.png" alt="" />
+              <h3 class="box-title">UI/UX Design</h3>
+              <p class="box-description">
+                Elevate user experiences and captivate your audience with our
+                innovative UI/UX design services
+              </p>
+              <button class="button">Details</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
